Avoid blinking of editor area on iOS

--- a/app/assets/stylesheets/framework/files.scss
+++ b/app/assets/stylesheets/framework/files.scss
@@ -169,6 +169,7 @@
      */
     &.code {
       padding: 0;
+      -webkit-overflow-scrolling: auto; // Issue #13987
     }
   }
 }
